--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,14 @@ COMMON CSS
 **/
 *{
     margin: 0;
-    padding: 0;
+    
 
 }
 body{
     box-sizing: border-box;
-    
+    max-width: 375px;
+    margin: 0 auto;
+    background-color: #ddd;
 }
 h1, h2, h3, h4, h5, h6{
     font-family: 'Poppins', sans-serif;
@@ -31,8 +33,8 @@ ul, li, a{
     color: #303030;
 }
 .container {
-    max-width: 375px;
-    margin: 0 auto;
+    padding: 0 10px;
+    
     /* max-height: 812px; */
 }
 .row{
@@ -45,87 +47,28 @@ ul, li, a{
 COMMON CSS
 **/
 /**
-ONBOARING SECTION START
+SPLASH SCREEN SECTION START
 **/
-.tdi_1 {
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    /* width: 100%; */
-    /* height: 100vh; */
-    
-    
-}
-.label p {
-    color: #fff;
-    line-height: 1.2;
-    font-weight: 600;
-    display: flex;
-    align-items: center;
-}
-.label p span{
-    color: #fff;
-    line-height: 1.2;
-    
-}
-.label {
-    position: absolute;
-    top: 45px;
-}
-.content {
-    position: absolute;
-    bottom: 238px;
-    width: 247px;
-    display: flex;
-    flex-direction: column;
-    row-gap: 28px;
-}
-.effect {
-    padding-top: 84vh;
+.spalsh-screen {
+    background-image: url(../image/Bgfood.png);
+    padding-top: 100vh;
     background-repeat: no-repeat;
-    background-size: contain;
-}
-.label i.fas.fa-star {
-    margin-right: 10px;
-    font-size: 13px;
-}
-.caption h1 {
-    color: #ffffff;
-    font-size: 54px;
-    line-height: 1.4;
-}
-.header-title p {
-    color: #ffffff;
-}
-button.fill-red-btn {
-    font-size: 16px;
-    line-height: 1.2;
-    text-align: center;
-    background-color: #E23E3E;
-    border-style: none;
-    color: #ffffff;
-    padding: 16px 32px;
-    border-radius: 10px;
-    margin: 0 auto;
-    cursor: pointer;
-}
-.fill-red-btn i.fas.fa-arrow-right {
-    margin-left: 12px;
+    background-size: cover;
 }
 
-
 /**
-ONBOARING SECTION END
+SPLASH SCREEN SECTION END
 **/
 /**
-CREATE RECIPE SECTION START
+NOTIFICATION SECTION START
 **/
-section.create-recipe-section {
+section.notification-section {
     padding-top: 20px;
 }
 .tdi_3 {
     padding: 0 10px;
     flex-direction: column;
+    margin-bottom: 20px;
 }
 .notifications {
     width: 100%;
@@ -201,6 +144,14 @@ p.recipe-content {
     background-color: #F1F1F1;
     column-gap: 12px;
     margin-bottom: 20px;
+    position: relative;
+}
+.recipe-notification a {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 .title span {
     font-size: 4em;
@@ -231,6 +182,9 @@ p.recipe-content {
     justify-content: center; */
     background-color: rebeccapurple;
     padding: 10px 0;
+    position: absolute;
+    width: 100%;
+    /* bottom: 0; */
 }
 li.list:nth-child(1) {
     margin-left: 0;
@@ -250,9 +204,297 @@ span.icon {
     transition: .5s ;
 }
 .navigation ul li:hover a .icon{
-    transform: translateY(-35px);
+    /* opacity: 1; */
     /* transition: .5s ease-in-out; */
 }
+.navigation ul li:hover a span.icon{
+    transform: translateY(-25px);
+    /* z-index: 1; */
+    /* transition: .5s ease-in-out; */
+}
+.navigation ul li:hover .indicator{
+    opacity: 1;
+    transform: translateY(-25px);
+    z-index: -1;
+    /* transition: .5s ease-in-out; */
+}
+.navigation ul {
+    display: flex;
+    justify-content: center;
+}
+li.list {
+    position: relative;
+}
+.tdi_5{
+    position: relative;
+    /* height: 812px; */
+}
+.indicator {
+    background: red;
+    position: absolute;
+    width: 35px;
+    height: 36px;
+    left: -6px;
+    border-radius: 50px;
+    top: -5px;
+    transition: .5s ;
+    opacity: 0;
+}
+/**
+NOTIFICATION SECTION END
+**/
+/**
+RECIPE DETAILS SECTION START
+**/
+section.recipe-detail {
+    padding-top: 20px;
+}
+.recipe-details {
+    padding: 0 10px;
+}
+.navigation-arrow {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+.tdi_6 h3.title {
+    font-size: 24px;
+    line-height: 1.2;
+    width: 300px;
+    margin-bottom: 20px;
+}
+.recipe-image {
+    padding-top: 24vh;
+    background-repeat: no-repeat;
+    position: relative;
+    background-size: cover;
+    border-radius: 15px;
+    margin-bottom: 20px;
+}
+.play-button-icon {
+    position: absolute;
+    top: 34%;
+    right: 43%;
+}
+span.rating-number {
+    font-size: 14px;
+    line-height: 1.2;
+    font-weight: 600;
+    margin-left: 10px;
+}
+.rating-number span {
+    color: #A9A9A9;
+    margin-left: 5px;
+}
+i.fas.fa-star {
+    color: #FFB661;
+}
+.rating {
+    margin-bottom: 15px;
+}
+.author {
+    display: flex;
+    column-gap: 15px;
+}
+.author-content {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+p.author-name {
+    font-size: 16px;
+    line-height: 1.2;
+    font-weight: 600;
+}
+.author-location span {
+    font-size: 14px;
+    line-height: 1.4;
+    color: #A9A9A9;
+    margin-left: 5px;
+}
+i.fa-solid.fa-location-dot {
+    color: #E23E3E;
+}
+.author-rating {
+    margin-bottom: 30px;
+}
+.ingredient p {
+    font-size: 20px;
+    line-height: 1.4;
+    font-weight: 600;
+}
+.ingredient span {
+    font-size: 14px;
+    line-height: 1.2;
+    color: #A9A9A9;
+}
+.ingredients-details {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
+}
+.ingredients-item {
+    border-radius: 12px;
+    background: #F1F1F1;
+    padding: 15px;
+    display: flex;
+    column-gap: 15px;
+    margin-bottom: 10px;
+}
+.ingredients-icon {
+    background: #ffffff;
+    width: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    border-radius: 15px;
+}
+.ingredients-icon img {
+    width: 100%;
+}
+.ingredients-details span {
+    font-size: 14px;
+    line-height: 1.2;
+    color: #A9A9A9;
+}
+.ingredient {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+.ingredients-details p {
+    font-weight: 600;
+}
+/**
+RECIPE DETAILS SECTION END
+**/
+/**
+DISCOVER RECIPE SECTION START
+**/
+.discover-section{
+    padding-top: 20px;
+    
+}
+.save-recipes{
+    padding: 0 10px;
+    margin-bottom: 20px;
+    
+}
+.save-recipe {
+    margin-bottom: 15px;
+}
+.save-recipe:last-child {
+    margin-bottom: 0;
+}
+.save-recipes button.fill-nocolor-btn {
+    width: 172px;
+}
+.save-recipes button.fill-red-btn {
+    width: 172px;
+}
+.recipe-image .icon-background {
+    background: rgba(48, 48, 48, 0.3);
+    padding: 3vh;
+    /* opacity: .5; */
+    border-radius: 50%;
+    /* width: 10%; */
+    backdrop-filter: blur(5px);
+}
+button.play {
+    background: transparent;
+    border: none;
+    cursor: pointer;
+}
+button.recipe-bookmark {
+    border: none;
+    cursor: pointer;
+}
+i.fas.fa-play {
+    position: absolute;
+    top: 37%;
+    left: 45%;
+    color: #ffffff;
+}
+.recipe-rating i.fas.fa-star {
+    color: #ffffff;
+    font-size: 14px;
+}
+.recipe-rating span {
+    font-weight: 600;
+    color: #ffffff;
+    margin-left: 5px;
+}
+.recipe-rating {
+    position: absolute;
+    top: 11px;
+    padding: 4px 10px;
+    border-radius: 5px;
+    left: 14px;
+    display: flex;
+    align-items: center;
+    backdrop-filter: blur(5px);
+    background: rgba(48, 48, 48, 0.3);
+}
+.recipe-bookmark {
+    position: absolute;
+    top: 15px;
+    right: 14px;
+    background: #ffffff;
+    width: 12%;
+    height: 16%;
+    display: flex;
+    justify-content: center;
+    border-radius: 50%;
+    align-items: center;
+}
+.recipe-bookmark i.fas.fa-bookmark {
+    color: red;
+    font-size: 20px;
+}
+.recipe-playtime span {
+    right: 11px;
+    bottom: 13px;
+    color: #fff;
+    position: absolute;
+    padding: 4px 10px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    backdrop-filter: blur(5px);
+    background: rgba(48, 48, 48, 0.3);
+}
+.recipe-name h3.title {
+    font-size: 16px;
+    line-height: 1.4;
+    margin-bottom:10px;
+}
+i.fa.fa-ellipsis-h {
+    float: right;
+}
+.author-thumb {
+    display: flex;
+    align-items: center;
+}
+.tdi_7 {
+    align-items: center;
+}
+.tdi_7 p.author-name {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.2;
+    color: #A9A9A9;
+}
+
+/**
+DISCOVER RECIPE SECTION END
+**/
+/**
+CREATE RECIPE SECTION START
+**/
+
 /**
 CREATE RECIPE SECTION END
 **/
