html and css updated

--- a/css/style.css
+++ b/css/style.css
@@ -437,7 +437,7 @@ i.fa-solid.fa-location-dot {
     padding: 15px;
     display: flex;
     column-gap: 15px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 .ingredients-icon {
     background: #ffffff;
@@ -594,6 +594,80 @@ DISCOVER RECIPE SECTION END
 /**
 CREATE RECIPE SECTION START
 **/
+section.create-recipe-section {
+    padding-top: 20px;
+    background-color: #ffffff;
+}
+.serve .ingredients-item {
+    align-items: center;
+    justify-content: space-between;
+}
+.server-icon-text p {
+    display: flex;
+    column-gap: 15px;
+    align-items: center;
+    font-weight: 600;
+}
+.server-icon-text p span {
+    display: flex;
+    align-items: center;
+    background-color: #ffffff;
+    width: 36px;
+    height: 36px;
+    border-radius: 10px;
+    justify-content: center;
+}
+.server-number-arrow p {
+    display: flex;
+    column-gap: 10px;
+}
+.server-number-arrow a {
+    display: flex;
+    align-items: center;
+}
+.field {
+    border-radius: 12px;
+    padding: 12px 16px;
+    margin-bottom: 15px;
+    border: 2px solid #E23E3E;
+}
+.field p {
+    font-size: 14px;
+    line-height: 1.2;
+}
+form.save-item {
+    display: flex;
+    /* justify-content: center; */
+}
+form.save-item .input-content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+.type2 input[type="text"] {
+    padding: 12px 16px;
+    width: 75px;
+    border: 1px solid #D9D9D9;
+    border-radius: 10px;
+}
+.type1 input[type="text"] {
+    padding: 12px 16px;
+    width: 143px;
+    border: 1px solid #D9D9D9;
+    border-radius: 10px;
+}
+.save-item span {
+    border: 2px solid #181818;
+    width: 20px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: 600;
+}
 
 /**
 CREATE RECIPE SECTION END
