ALL HTML and CSS UPDATED

--- a/css/style.css
+++ b/css/style.css
@@ -104,8 +104,10 @@ SPLASH SCREEN SECTION END
 NOTIFICATION SECTION START
 **/
 section.notification-section {
-    padding-top: 20px;
+   padding-top: 20px;
     background-color: #ffffff;
+    position: relative;
+    height: 812px;
 }
 .tdi_3 {
     padding: 0 10px;
@@ -125,16 +127,18 @@ h4.notifications-title {
     float: right;
 }
 .fill-nocolor-btn{
-    font-size: 16px;
+    font-size: 12px;
     line-height: 1.2;
     text-align: center;
     background-color: #ffffff;
     border-style: none;
-    color: #E23E3E;
+    color: #EE8B8B;
     padding: 16px 32px;
     border-radius: 10px;
     margin: 0 auto;
     cursor: pointer;
+    font-weight: 600;
+
     
 }
 .fill-red-btn{
@@ -144,6 +148,9 @@ h4.notifications-title {
     padding: 16px 32px;
     border-radius: 10px;
     margin: 0 auto;
+    font-size: 12px;
+    font-weight: 600;
+    line-height: 1.2;
     
 }
 .follow-author .fill-red-btn{
@@ -243,16 +250,23 @@ p.recipe-content {
     justify-content: center;
 } */
 .navigation {
-    /* display: flex;
-    align-items: center;
-    justify-content: center; */
     background-color: #ffffff;
     padding: 10px 0;
-    box-shadow: 0px -1px 8px rgba(108, 108, 108, 0.08);
+    box-shadow: 0px -1px 8px rgb(108 108 108 / 8%);
     width: 100%;
-    position: static;
-    /* bottom: 0; */
+    position: fixed;
+    bottom: 0;
+    height: 70px;
+    display: flex;
+    align-items: center;
 }
+.navigation-bottom {
+    position: fixed;
+    width: 100%;
+    bottom: 50px;
+    
+}
+
 /* li.list:nth-child(1) {
     margin-left: 0;
 } */
@@ -271,25 +285,25 @@ span.icon {
 
 .red-bg{
     background-color: red;
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
     color: #ffffff;
     position: absolute;
-    top: -23px;
+    top: -36px;
     left: -16px;
 }
 span.icon.red-bg::before {
     content: '';
     position: absolute;
-    top: 36%;
+    top: 45%;
     background: transparent;
     width: 20px;
     height: 20px;
-    left: -22px;
+    left: -25px;
     border-top-right-radius: 20px;
     box-shadow: 9px -7px 8px rgb(108 108 108 / 8%);
 }
@@ -353,13 +367,13 @@ section.recipe-detail {
     margin-bottom: 20px;
 }
 .recipe-image {
-    padding-top: 24vh;
     background-repeat: no-repeat;
     position: relative;
-    background-size: cover;
+    background-size: contain;
     border-radius: 15px;
     margin-bottom: 20px;
     background-position: center;
+    padding-top: 200px;
 }
 .play-button-icon {
     position: absolute;
@@ -568,7 +582,7 @@ i.fas.fa-play {
 .recipe-name h3.title {
     font-size: 16px;
     line-height: 1.4;
-    margin-bottom:10px;
+    margin-bottom:5px;
 }
 i.fa.fa-ellipsis-h {
     float: right;
@@ -638,6 +652,12 @@ section.create-recipe-section {
 form.save-item {
     display: flex;
     /* justify-content: center; */
+    flex-direction: column;
+    row-gap: 15px;
+    margin-bottom: 20px;
+}
+.save-recipe-ingredients {
+    margin-bottom: 20px;
 }
 form.save-item .input-content{
     display: flex;
@@ -650,25 +670,417 @@ form.save-item .input-content{
     width: 75px;
     border: 1px solid #D9D9D9;
     border-radius: 10px;
+    outline: none;
+    font-size: 14px;
+    line-height: 1.2;
+    font-weight: 400;
 }
 .type1 input[type="text"] {
     padding: 12px 16px;
     width: 143px;
     border: 1px solid #D9D9D9;
     border-radius: 10px;
+    outline: none;
+    font-size: 14px;
+    line-height: 1.2;
+    font-weight: 400;
+    
 }
-.save-item span {
-    border: 2px solid #181818;
-    width: 20px;
-    height: 20px;
+.save-item button {
+    border: 1px solid #181818;
+    width: 24px;
+    height: 24px;
+    border-radius: 8px;
+    font-weight: 600;
+    background: no-repeat;
+    cursor: pointer;
+    font-size: 16px;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 8px;
+}
+.navigation button.fill-red-btn {
+    width: 100%;
+    margin-top: 5px;
+    cursor: pointer;
     font-size: 16px;
+    line-height: 1.2;
     font-weight: 600;
 }
-
+.save-recipe-ingredients span {
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+}
+.create-recipe-section .navigation {
+    display: block;
+    position: relative;
+}
 /**
 CREATE RECIPE SECTION END
 **/
+/**
+HOME SECTION START
+**/
+.home-section{
+    padding-top: 20px;
+    position: relative;
+    background-color: #ffffff;
+    /* height: 812px; */
+}
+input[type="search"]{
+    background-image: url(../image/Union.svg);
+    background-repeat: no-repeat;
+    outline: none;
+    border: 1px solid #D9D9D9;
+    background-position-x: 21px;
+    background-position-y: 11px;
+    width: 100%;
+    padding: 12px 16px;
+    border-radius: 10px;
+    padding-left: 48px;
+    font-size: 14px;
+    line-height: 1.2;
+
+}
+::placeholder {
+    color: #C1C1C1;
+}
+.search-button{
+    margin-bottom: 20px;
+}
+.tdi_8 {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+h3.home-title {
+    font-size: 20px;
+    line-height: 1.4;
+    display: flex;
+    align-items: center;
+    width: 50%;
+}
+.home-title span {
+    width: 15px;
+    margin-left: 5px;
+}
+.home-title span img {
+    display: flex;
+    align-items: center;
+}
+.trending-now a {
+    color: #E23E3E;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+}
+.trending-now{
+    margin-bottom: 10px;
+}
+.popular-category h3.home-title {
+    width: 100%;
+    margin-bottom: 20px;
+}
+.popular-category{
+    margin-bottom: 20px;
+}
+.menu-choose-button a.fill-red-btn {
+    padding: 8px 12px;
+    font-size: 12px;
+    line-height: 1.2;
+    color: #ffffff;
+    font-weight: 600;
+}
+.menu-choose-button a.fill-nocolor-btn {
+    padding: 8px 12px;
+    font-size: 12px;
+    line-height: 1.2;
+    color: #EE8B8B;
+    font-weight: 600;
+}
+.menu-choose-button {
+    display: flex;
+    justify-content: space-between;
+    overflow: hidden;
+    margin-bottom: 70px;
+}
+.trending-now-content .save-recipe {
+    margin-bottom: 15px;
+    width: 100%;
+}
+.trending-now-content {
+    /* display: flex; */
+    
+    column-gap: 20px;
+    
+}
+.category-item {
+    
+    display: flex;
+    flex-wrap: nowrap;
+    column-gap: 20px;
+    
+}
+.category-items-content{
+    background: #F1F1F1;
+    padding: 0 10px;
+    border-radius: 12px;
+}
+.category-item-image {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+    
+}
+.item-title p {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 1.4;
+}
+.time {
+    display: inline-block;
+}
+.time p {
+    font-size: 12px;
+    line-height: 1.4;
+    color: #C1C1C1;
+}
+.time span {
+    font-weight: 600;
+    line-height: 2;
+}
+.bookmark {
+    display: flex;
+    background: #ffffff;
+    width: 24px;
+    height: 24px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+}
+.category-item-image img {
+    width: 80%;
+    border-radius: 50%;
+    margin-top: -50px;
+    filter: drop-shadow(0px 8px 25px rgba(32, 32, 32, 0.15));
+}
+.category-item-image {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.time-bookmark {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 5px;
+}
+.popular-category-item {
+    width: 100%;
+    display: flex;
+    column-gap: 20px;
+    
+    
+}
+.item-title {
+    text-align: center;
+    margin-bottom: 10px;
+    
+}
+.recent-item .item-image {
+    width: 124px;
+    margin-bottom: 10px;
+}
+.recent-item .item-image img{
+    border-radius: 10px;
+}
+.recent-item {
+    width: 124px;
+}
+.recepe-item-content {
+    padding: 0 5px;
+}
+.recepe-item-content p {
+    font-size: 14px;
+    line-height: 1.2;
+    font-weight: 600;
+}
+.recepe-item-content span {
+    font-size: 10px;
+    line-height: 1.6;
+    color: #A9A9A9;
+}
+
+.recent-recipe-item {
+    margin-bottom: 20px;
+}
+.recent-recipe-wrap {
+    display: flex;
+    column-gap: 20px;
+}
+.popular-creators h3.home-title {
+    width: 70%;
+}
+.popular-creators{
+    padding-bottom: 120px;
+}
+.creator-thumb {
+    
+    display: flex;
+    column-gap: 20px;
+}
+.creator-content {
+    width: 75px;
+}
+.thumb-image {
+    margin-bottom: 5px;
+}
+.author_name p {
+    font-size: 12px;
+    line-height: 1.4;
+    text-align: center;
+    font-weight: 600;
+}
+.popular-creators .trending-now {
+    margin-bottom: 20px;
+}
+/**
+HOME SECTION END
+**/
+/**
+PROFILESECTION START
+**/
+.profile-section{
+    background-color: #ffffff;
+    /* height: 812px; */
+    padding-top: 20px;
+}
+
+.profile-section .save-recipe  .profile-playtime p {
+    color: #ffffff;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.profile-section .save-recipe .profile-playtime span {
+    display: block;
+    color: #ffffff;
+    font-size: 12px;
+    line-height: 1.4;
+}
+.profile-playtime {
+    width: 50%;
+    display: inline-block;
+    position: absolute;
+    left: 17px;
+    bottom: 14px;
+}
+.recipe-bookmark i.fa.fa-ellipsis-h {
+    color: #E23E3E;
+}
+a.fill-nocolor-btn {
+    padding: 8px 12px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+a.fill-red-btn {
+    padding: 8px 12px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.author-details p {
+    font-size: 12px;
+    line-height: 1.4;
+    color: #A9A9A9;
+    margin-bottom: 5px;
+}
+.author-profile-details {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+}
+.author-details span{
+    font-size: 20px;
+    line-height: 1.2;
+    font-weight: 600;
+}
+.line-color{
+    border-bottom: 1px solid #D9D9D9;
+    margin-bottom: 15px;
+    padding-bottom: 20px;
+}
+.author-bio p {
+    font-size: 14px;
+    line-height: 1.2;
+    color: #A9A9A9;
+    margin-bottom: 20px;
+}
+.author-bio {
+    width: 75%;
+}
+h3.name-title {
+    font-size: 20px;
+    line-height: 1.4;
+    margin-bottom: 10px;
+}
+.profile-image {
+    width: 100px;
+}
+.profile-image img{
+    border-radius: 50%;
+}
+a.edit-profile {
+    padding: 8px 12px;
+    border: 1px solid #E23E3E;
+    border-radius: 10px;
+    color: #E23E3E;
+    font-size: 14px;
+    line-height: 1.2;
+    font-weight: 600;
+}
+.author-profile-summary .profile-thumb {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
+    margin-bottom: 10px;
+}
+.profile-section .notifications {
+    margin-bottom: 0;
+}
+.profile-section h4.notifications-title {
+    margin-bottom: 25px;
+}
+/**
+PROFILESECTION END
+**/
+.ingredients-items {
+    padding-bottom: 10px;
+}
+
+
+.recipe-heading {
+    margin-bottom: 20px;
+}
+
+.recipe-image {
+    background-repeat: no-repeat;
+    position: relative;
+    background-size: auto;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    background-position: center;
+    padding-top: 200px;
+}
+.create-recipe-section .recipe-title.tdi_6 {
+    margin-bottom: 20px;
+}
