--- a/css/style.css
+++ b/css/style.css
@@ -253,17 +253,19 @@ p.recipe-content {
     background-color: #ffffff;
     padding: 10px 0;
     box-shadow: 0px -1px 8px rgb(108 108 108 / 8%);
-    width: 100%;
     position: fixed;
     bottom: 0;
-    height: 70px;
+    height: 45px;
     display: flex;
     align-items: center;
+    width: 375px;
 }
 .navigation-bottom {
-    position: fixed;
+    
     width: 100%;
-    bottom: 50px;
+    position: absolute;
+    top: 18px;
+    
     
 }
 
@@ -989,6 +991,9 @@ a.fill-nocolor-btn {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.splash-title a.fill-red-btn {
+    width: auto;
 }
 a.fill-red-btn {
     padding: 8px 12px;
